--- a/WebApiPrueba/appsettings.json
+++ b/WebApiPrueba/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "key": "SOFTTEK",
+    "Issuer": "http://localhost:5000/",
+    "Audience": "http://localhost:5000/",
+    "Subject" : "baseWebApiSubject"
+  }
 }
