--- a/WebApiPrueba/appsettings.json
+++ b/WebApiPrueba/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
-    "key": "SOFTTEK",
+  "JWT": {
+    "key": "SOFTTEKPRUEBAPAICORE",
     "Issuer": "http://localhost:5000/",
     "Audience": "http://localhost:5000/",
-    "Subject" : "baseWebApiSubject"
+    "Subject" : "Prueba"
   }
 }
